Fix menu text alignment on medium sized screens.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -308,7 +308,7 @@ nav.main-menu-container {
 						text-align: center;
 
 						@include respond-to( $bp-m ) {
-							display: inline-block;
+							text-align: left;
 						}
 
 						&:hover {
